<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>edu.neu.cs5004</groupId>
  <artifactId>assignment10</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>Assignment for class CS5004</name>

  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.javadoc.failOnError>true</maven.javadoc.failOnError>
  </properties>

   <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  
    <build>    
        <defaultGoal>
            clean test site
        </defaultGoal>
        <plugins> 

            <plugin> 
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.7.6.201602180812</version>
                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-check</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <rule >
                                    <element>BUNDLE</element>
                                    <limits>
                                        <limit >
                                            <counter>COMPLEXITY</counter>
                                            <value>COVEREDRATIO</value>
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!--
               -Uncomment to run PMD and fail compilation
               -->
            <!--<plugin>-->
                <!--<groupId>org.apache.maven.plugins</groupId>-->
                <!--<artifactId>maven-pmd-plugin</artifactId>-->
                <!--<version>3.6</version>-->
                <!--<configuration>-->
                    <!--<verbose>-->
                        <!--true-->
                    <!--</verbose>-->
                    <!--<failOnViolation>false</failOnViolation>-->
                <!--</configuration>-->
                <!--<executions>-->
                    <!--<execution>-->
                        <!--<phase>validate</phase>-->
                        <!--<goals>-->
                            <!--<goal>check</goal>-->
                            <!--<goal>cpd-check</goal> duplicate code check-->
                        <!--</goals>-->
                    <!--</execution>-->
                <!--</executions>-->
            <!--</plugin>-->

        </plugins>
    </build>


    
     <reporting> 
        <plugins> 
<!--
   -
   -            Cobertura for code coverate 
   -            Removed since it does not play nice with Java 8 features
   -->
           <!-- <plugin> -->
                <!--<groupId>org.codehaus.mojo</groupId>-->
                <!--<artifactId>cobertura-maven-plugin</artifactId>-->
                <!--<version>2.7</version>-->
            <!--</plugin>-->

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.7.6.201602180812</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>2.5</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>2.17</version>
                <configuration>
                    <configLocation>google_checks.xml</configLocation>
                </configuration>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>checkstyle</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>

            <plugin> 
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>3.0.1</version>
                <configuration>
                    <xmlOutput>true</xmlOutput>
                    <!-- Optional directory to put findbugs xdoc xml report -->
                    <xmlOutputDirectory>target/site</xmlOutputDirectory>
                </configuration>
            </plugin>

            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-javadoc-plugin</artifactId>
              <version>2.10.3</version>
              <configuration>
                  <show>package</show>
                  <sourceFileExcludes>
                      <exclude>**/*Test.java</exclude>
                  </sourceFileExcludes>
              </configuration>
          </plugin>

           <plugin>
            <artifactId>maven-pmd-plugin</artifactId>
            <version>3.6</version>
            <configuration>
                <skipEmptyReport>false</skipEmptyReport>
                <rulesets>
                    <ruleset>https://raw.githubusercontent.com/therapon/cs5004/master/rules.xml</ruleset>
                </rulesets>
            </configuration>
            <reportSets>
                <reportSet>
                    <reports>
                        <report>pmd</report>
                        <!--<report>cpd</report>-->
                    </reports>
                </reportSet>
            </reportSets>
        </plugin>

        </plugins>
    </reporting>
</project>
